--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&family=Varela+Round&display=swap');
 
 #content {
     max-width:1600px;
@@ -5,21 +6,44 @@
 }
 
 nav a{
-    text-align:center;
+    text-decoration: none;
     color:#000;
+    text-align:center;
+    padding: 35px;
+    
 }
 
 #background {
-    height:725px;
+    height:1000px;
     background-color: #1b2c9d ;
 }
 
+.book,join {
+    background-color: #FFB703;
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+
+.card-img {
+    border: 10px solid #FFB703;
+    
+}
+
+main section img {
+    box-sizing: border-box;
+}
+
 footer {
-    background-color:#e8be41;
+    background-color:#FFB703;
     color:#000;
     margin-top: 200px;
     justify-content: space-around;
     align-items: center;
+    padding: 25px 50px;
 }
 
 footer a {
@@ -54,14 +78,16 @@ footer a:hover {
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 100px;
+    margin-bottom: 35px;
 }
 
 nav a:hover,.book:hover,.join:hover {
-    background-color:#e8be41;
+    background-color:#FFB703;
     color:#FFF;
 }
-h4,.msg h2 {
+.msg h2 {
     color:#000;
+    padding: 35px;
 }
 
 #hero-msg h4 {
@@ -74,37 +100,39 @@ h4,.msg h2 {
 }
 
 header {
-    background-color:#e8be41;
+    background-color:#FFB703;
     display: grid;
     grid-template-columns: 150px auto;
 }
 
 body {
     background-color: #FFF;
-    font-family: Poppins, Helvetica, sans-serif;
-    font-size: 22px;
+    font-family: Quicksand, Varela_Round;
+    font-size: 24px;
     margin: 0;
     padding: 0;
+}
+
+
+h2 {
+    margin: 0;
 }
 
 .logo {
 width:80px;
 }
 .home-title {
-    color:#e8be41;
-    font-family: Kalam;
+    color:#FFB703;
+    font-family: Quicksand, Varela_Round;
     font-size: 2em;
     margin-top: 10px;
 }
 .msg p {
     color:#000;
-    font-size: .8em;
+    font-size: 1em;
     padding-bottom: 15px;
 }
 
-h2 {
-    margin: 0;
-}
 #logo_link {
     padding-top: 5px;
     justify-self: center;
@@ -114,3 +142,10 @@ h2 {
     width: 80px;
     padding-top: 10px;
 }
+
+footer .social img {
+    padding-top: 15px;
+
+.rivers-card, .camping-card, .rapids-card {
+        margin: 200px 0;
+    } 
