--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -145,7 +145,8 @@ width:80px;
 
 footer .social img {
     padding-top: 15px;
+}
 
 .rivers-card, .camping-card, .rapids-card {
-        margin: 200px 0;
-    } 
+    margin: 200px 0
+}
