--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -7,15 +7,22 @@
 
 nav a{
     text-decoration: none;
-    color:#000;
+    color:#FFF;
     text-align:center;
     padding: 35px;
     
 }
 
+nav {
+    display: flex;
+    justify-content: space-around; 
+}
+
 #background {
     height:1000px;
-    background-color: #1b2c9d ;
+    background-color: #1b2c9d;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 .book,join {
@@ -28,22 +35,14 @@ nav a{
     border-radius: 5px;
 }
 
-.card-img {
-    border: 10px solid #FFB703;
-    
-}
-
-main section img {
-    box-sizing: border-box;
-}
-
 footer {
-    background-color:#FFB703;
-    color:#000;
-    margin-top: 200px;
+    background-color: #FFB703;
+    color: black;
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 25px 50px;
 }
 
 footer a {
@@ -67,6 +66,11 @@ footer a:hover {
     width:100%;
 }
 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
 
 #hero-box {
     grid-column: 1/4;
@@ -78,13 +82,13 @@ footer a:hover {
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 100px;
-    margin-bottom: 35px;
 }
 
 nav a:hover,.book:hover,.join:hover {
     background-color:#FFB703;
     color:#FFF;
 }
+
 .msg h2 {
     color:#000;
     padding: 35px;
@@ -92,7 +96,7 @@ nav a:hover,.book:hover,.join:hover {
 
 #hero-msg h4 {
     text-align: center;
-    color: rgb(0, 0, 0);
+    color: white;
 }
 
 #hero-msg h1,#hero-msg div,.button-box,main section {
@@ -100,7 +104,7 @@ nav a:hover,.book:hover,.join:hover {
 }
 
 header {
-    background-color:#FFB703;
+    background-color:rgba(0, 0, 0, 0.3);
     display: grid;
     grid-template-columns: 150px auto;
 }
@@ -113,24 +117,34 @@ body {
     padding: 0;
 }
 
-
-h2 {
-    margin: 0;
-}
-
 .logo {
 width:80px;
 }
+
 .home-title {
     color:#FFB703;
     font-family: Quicksand, Varela_Round;
     font-size: 2em;
     margin-top: 10px;
 }
+
 .msg p {
     color:#000;
     font-size: 1em;
     padding-bottom: 15px;
+}
+
+.msg {
+    background-color:#FFB703;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+h2 {
+    margin: 0;
 }
 
 #logo_link {
@@ -149,4 +163,48 @@ footer .social img {
 
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0
+}
+.card-img {
+    border: 10px solid #FFB703;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+             
+
+.main section img {
+    box-sizing: border-box;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
+.card-img, .mountains {
+    width: 100%;
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
