--- a/final_project/styles/hh-styles-safety.css
+++ b/final_project/styles/hh-styles-safety.css
@@ -21,6 +21,8 @@ nav {
 #background {
     height:1000px;
     background-color: #947F57;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 footer {
@@ -57,17 +59,19 @@ footer a:hover {
 
 #home {
     display: grid;
-    grid-template-columns: 2;
-    /* margin-top: -100px;  */
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: -100px; 
 }
 
 #home-box {
-
+    grid-column: 1/4;
+    grid-row: 1/3;
     z-index: -1;
 }
 
 #home-msg {
-
+    grid-column: 2/3;
+    grid-row: 1/2;
     margin-top: 150px;
 }
 
@@ -85,9 +89,11 @@ nav a:hover,.book:hover,.join:hover {
     text-align: center;
 }
 
-/* #prof-img {
-
-} */
+#prof-img {
+    grid-column: 1fr;
+    grid-row: 1/3;
+    z-index: -1;
+}
 
 header {
     background-color:rgba(185, 194, 196, 0.7);
@@ -129,13 +135,18 @@ footer .social img {
     padding-right: 15px;
 }    
 
-/* main {
-} */
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+}
 
 .msg {
     background-color:#947F57;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 4/8;
+    grid-row: 1/5;
     box-shadow: 5px 5px 10px #6f7364;
 }
 
@@ -143,6 +154,8 @@ footer .social img {
     background-color:#947F57;
     line-height: 1.5em;
     padding: 30px;
+    grid-column: 4/8;
+    grid-row: 6/7;
     box-shadow: 5px 5px 10px #6f7364;
 }
 
@@ -161,7 +174,8 @@ footer .social img {
 }
 
 .bottom-msg {
-
+    grid-column: 2/10;
+    grid-row: 7/8;
     margin-top: 50px;
 }
 
