--- a/final_project/styles/hh-styles-safety.css
+++ b/final_project/styles/hh-styles-safety.css
@@ -89,12 +89,6 @@ nav a:hover,.book:hover,.join:hover {
     text-align: center;
 }
 
-#prof-img {
-    grid-column: 1fr;
-    grid-row: 1/3;
-    z-index: -1;
-}
-
 header {
     background-color:rgba(185, 194, 196, 0.7);
     display: grid;
@@ -135,28 +129,31 @@ footer .social img {
     padding-right: 15px;
 }    
 
-.home-grid {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-}
-
 .msg {
     background-color:#947F57;
     line-height: 1.5em;
     padding: 35px;
-    grid-column: 4/8;
-    grid-row: 1/5;
-    box-shadow: 5px 5px 10px #6f7364;
+    box-shadow: 5px 5px 10px #000000;
+}
+
+.msg p{
+    text-align: center;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
 }
 
 .side-msg {
     background-color:#947F57;
     line-height: 1.5em;
     padding: 30px;
-    grid-column: 4/8;
-    grid-row: 6/7;
-    box-shadow: 5px 5px 10px #6f7364;
+    margin-top: -50px;
+    margin-left: 100px;
+    margin-right: 25px;
+    box-shadow: 5px 5px 10px #000000;
 }
 
 .side-msg p{
@@ -170,13 +167,17 @@ footer .social img {
 }
 
 .professional {
+    width: 350px;
+    height: 500px;
+    margin-top: -50px;
+    margin-left: 225px;
     box-shadow: 5px 5px 10px #000000;
 }
 
 .bottom-msg {
-    grid-column: 2/10;
-    grid-row: 7/8;
     margin-top: 50px;
+    grid-column: 1/3;
+    grid-row: 2/3;
 }
 
 .bottom-msg p {
