--- a/final_project/styles/hh-styles-safety.css
+++ b/final_project/styles/hh-styles-safety.css
@@ -83,6 +83,8 @@ nav a:hover,.book:hover,.join:hover {
 #home-msg h4 {
     text-align: center;
     color: #000000;
+    background-color: rgba(148, 127, 87, 0.5);
+    box-shadow: 5px 5px 10px #947F57;
 }
 
 #home-msg h1,#home-msg div,main section {
@@ -179,3 +181,74 @@ footer .social img {
     grid-column: 1/3;
     grid-row: 2/3;
 }
+
+/* ______________________________________ */
+/* About Us Page */
+
+.about-us-grid{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+}
+
+.title-msg{
+text-align: center;
+}
+
+.bio_card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 400px;
+    margin: auto;
+    text-align: center;
+    grid-column: 1/3;
+    grid-row: 1/2;
+  }
+
+.bio_card h1{
+    font-size: 30px;
+}
+
+  .title {
+    color: grey;
+    font-size: 18px;
+  }
+
+  .promise_msg{
+    grid-column: 1/3;
+    grid-row: 2/3;
+    margin-left: 35%;
+    margin-right: 35%;
+  }
+
+  button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+  }
+
+  a {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
+  }
+
+  button:hover, a:hover {
+    opacity: 0.7;
+  }
+
+  .school {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+
+  .school_msg {
+    grid-column: 2/3;
+    grid-row: 3/4;
+  }
