--- a/final_project/styles/hh-styles-safety.css
+++ b/final_project/styles/hh-styles-safety.css
@@ -29,7 +29,7 @@ footer {
     background-color: #b9c2c4;
     color: #3D3D3D;
     padding: 15px 30px;
-    margin-top: 200px; 
+    margin-top: 5%; 
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -244,11 +244,9 @@ text-align: center;
   }
 
   .school {
-    grid-column: 1/2;
-    grid-row: 3/4;
+    margin: auto auto auto auto;
   }
 
   .school_msg {
-    grid-column: 2/3;
-    grid-row: 3/4;
+    margin: auto 50px auto auto;
   }
