--- a/final_project/styles/hh-styles-safety.css
+++ b/final_project/styles/hh-styles-safety.css
@@ -208,19 +208,19 @@ text-align: center;
     font-size: 30px;
 }
 
-  .title {
+.title {
     color: grey;
     font-size: 18px;
   }
 
-  .promise_msg{
+.promise_msg{
     grid-column: 1/3;
     grid-row: 2/3;
     margin-left: 35%;
     margin-right: 35%;
   }
 
-  button {
+button {
     border: none;
     outline: 0;
     display: inline-block;
@@ -233,20 +233,39 @@ text-align: center;
     font-size: 18px;
   }
 
-  a {
+a {
     text-decoration: none;
     font-size: 22px;
     color: black;
   }
 
-  button:hover, a:hover {
+button:hover, a:hover {
     opacity: 0.7;
   }
 
-  .school {
+.school {
     margin: auto auto auto auto;
   }
 
-  .school_msg {
+.school_msg {
     margin: auto 50px auto auto;
   }
+
+/* ______________________________________ */
+/* Services Page */
+
+.services-grid{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.services-msg{
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.services_offered{
+    margin-left: 20px;
+    text-align: left;
+}
