--- a/final_project/styles/hh-styles-safety.css
+++ b/final_project/styles/hh-styles-safety.css
@@ -254,18 +254,42 @@ button:hover, a:hover {
 /* ______________________________________ */
 /* Services Page */
 
+.services-msg{
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
 .services-grid{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-}
-
-.services-msg{
-    margin-left: 20px;
-    margin-right: 20px;
+    grid-template-rows: repeat(1, 1fr);
+    margin-top: 50px;
 }
 
 .services_offered{
     margin-left: 20px;
     text-align: left;
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+.handshake{
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin: auto auto auto auto;
+}
+
+.bottom-msg{
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.salaries{
+    color: #0000EE;
+}
+
+.Jobs_Search{
+    color: #0000EE;
 }
