--- a/final_project/styles/hh-styles-safety.css
+++ b/final_project/styles/hh-styles-safety.css
@@ -18,13 +18,6 @@ nav {
     justify-content: space-around; 
 }
 
-#background {
-    height:1000px;
-    background-color: #947F57;
-    grid-column: 1/11;
-    grid-row: 4/9;
-}
-
 footer {
     background-color: #b9c2c4;
     color: #3D3D3D;
@@ -65,8 +58,9 @@ footer a:hover {
 
 #home-box {
     grid-column: 1/4;
-    grid-row: 1/3;
+    grid-row: 1/2;
     z-index: -1;
+    /* margin-bottom: -100px; */
 }
 
 #home-msg {
@@ -83,8 +77,8 @@ nav a:hover,.book:hover,.join:hover {
 #home-msg h4 {
     text-align: center;
     color: #000000;
-    background-color: rgba(148, 127, 87, 0.5);
-    box-shadow: 5px 5px 10px #947F57;
+    background-color: rgba(185, 194, 196, 0.5);
+    box-shadow: 5px 5px 10px #b9c2c4;
 }
 
 #home-msg h1,#home-msg div,main section {
@@ -116,6 +110,8 @@ width:80px;
     margin-top: 10px;
     outline-color: #000;
     outline-width: 1em;
+    background-color: rgba(185, 194, 196, 0.5);
+    box-shadow: 5px 5px 10px #b9c2c4;
 }
 
 #logo_link {
@@ -132,10 +128,10 @@ footer .social img {
 }    
 
 .msg {
-    background-color:#947F57;
+    background-color: rgba(185, 194, 196, 0.6);
     line-height: 1.5em;
     padding: 35px;
-    box-shadow: 5px 5px 10px #000000;
+    box-shadow: 5px 5px 10px #b9c2c4;
 }
 
 .msg p{
@@ -145,17 +141,17 @@ footer .social img {
 .home-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
 }
 
 .side-msg {
-    background-color:#947F57;
+    background-color:#b9c2c4;
     line-height: 1.5em;
     padding: 30px;
-    margin-top: -50px;
-    margin-left: 100px;
+    margin-top: 35px;
+    margin-left: 25px;
     margin-right: 25px;
-    box-shadow: 5px 5px 10px #000000;
+    box-shadow: 5px 5px 10px #b9c2c4;
 }
 
 .side-msg p{
@@ -171,8 +167,9 @@ footer .social img {
 .professional {
     width: 350px;
     height: 500px;
-    margin-top: -50px;
-    margin-left: 225px;
+    margin-top: 35px;
+    margin-left: auto;
+    margin-right: auto;
     box-shadow: 5px 5px 10px #000000;
 }
 
